--- a/www/index.html
+++ b/www/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <script src="scripts/ethjs.min.js"></script>
         <script src="scripts/bootstrap.js"></script>
         <script src="scripts/main.js"></script>
     </head>
